Safari layout bug fixed?

--- a/src/containers/Home/styles.scss
+++ b/src/containers/Home/styles.scss
@@ -19,7 +19,7 @@
   }
 
   h2{
-    font-size: 45px;
+    font-size: 42px;
     font-weight: 100;
   }
 
@@ -142,6 +142,19 @@
   }
 
     @media (max-width: $mobile-width){
+
+        h1{
+          font-size: 38px;
+        }
+
+        h2 {
+          font-size: 38px;
+        }
+
+        p{
+          font-size: 16px;
+        }
+
       .heroWrapper{
         .hero{
             width: 90%;
@@ -151,6 +164,7 @@
           }
           h1{
             text-align: center;
+            font-size: 38px;
           }
         }
         .download{
